<resources>
    <string name="app_name">Intents</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_contact">Contact</string>
    <string name="action_payment">Payment</string>
    <string name="action_help">Help</string>
    <string name="action_rotate">Rotate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Mori Calliope is a virtual singer and rapper under Hololive Production, known for her
        distinctive voice and captivating performances. As a member of the English branch, she
        blends music genres like rap and rock, often incorporating themes of death and the
        afterlife. Her persona as the "grim reaper" adds a unique twist to her songs, gaining her a
        large international fanbase.
    </string>
</resources>