<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.intents.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        android:icon="@drawable/ic_contact"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_payment"
        android:orderInCategory="100"
        android:title="@string/action_payment"
        android:icon="@drawable/ic_payment"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_rotate"
        android:orderInCategory="100"
        android:title="@string/action_rotate"
        android:icon="@drawable/ic_rotate"
        app:showAsAction="ifRoom"
        />
</menu>